# cMake

./: .gitignore
.github/workflows/: cmake-single-platform.yml  static.yml
cMake/cMake/: CMakeLists.txt  CMakePresets.json
cMake/cMake/docs/: Doxyfile
cMake/cMake/docs/html/: index.html  navtreedata.js
cMake/cMake/docs/latex/: refman.tex
cMake/cMake/include/: cMake.h
cMake/cMake/src/: CMakeLists.txt  cMake.cpp
